--- a/index.html
+++ b/index.html
@@ -35,12 +35,16 @@
 	color: #FFF;
 }
 
+body {
+	background-image: url(./https://img2.imgtp.com/2024/05/05/AcSzilEb.jpg);
+}
 </style>
 </head>
 	
 
-<body background="milky-way-2695569_1280.jpg"
-"<div class="touxiang">
+<body background="星空背景.jpg" background:"https://img2.imgtp.com/2024/05/05/AcSzilEb.jpg">
+
+<div class="touxiang">
   <h1 class="body">罗辑的网站</h1>
 <span class="body"></span></span></div>
 
