--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>三体-罗辑的网站</title>
 <style type="text/css">
 .touxiang {
-	color: #FFF;
+	color: #000;
 	text-align: center;
 	font-family: "微软雅黑 Light";
 	height: 100px;
@@ -15,24 +15,24 @@
 	margin: 10px;
 	text-align: left;
 	font-family: "微软雅黑 Light";
-	color: #FFF;
+	color: #000;
 }
 .body {
 	background-image: url(milky-way-2695569_1280.jpg);
 }
 .xia
 {
-	text-align:center
-	background-color: #FFF
+	text-align:center;
+	background-color: #000;
 	
 	
 .xia
  {
-	color: #FFF;
-	color: #FFF;	
+	color: #000;
+	color: #000;	
 }
 .xia p {
-	color: #FFF;
+	color: #000;
 }
 
 body {
