--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ px;margin:10px;padding-color:#6bcff6;font-size:35px">
 px;margin:10px;font-size:35px;">
 <p>面壁者罗辑，我是你的破壁人。 </p></blockquote>
 </div>
-<div class="xia">
+<div class="jianjie">
 <p>引用的原文文字、美术作品、媒体内容等，著作权皆为其原作者所有。</br>
 本网站仅供学习和交流使用。如产生一切法律纠纷，本站概不负责。</p>
 </div>
