--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>三体-罗辑的网站</title>
 <style type="text/css">
 .touxiang {
-	color: #000;
+	color: #FFF;
 	text-align: center;
 	font-family: "微软雅黑 Light";
 	height: 100px;
@@ -15,7 +15,7 @@
 	margin: 10px;
 	text-align: left;
 	font-family: "微软雅黑 Light";
-	color: #000;
+	color: #FFF;
 }
 .body {
 	background-image: url(milky-way-2695569_1280.jpg);
@@ -28,11 +28,11 @@
 	
 .xia
  {
-	color: #000;
-	color: #000;	
+	color: #FFF;
+	color: #FFF;	
 }
 .xia p {
-	color: #000;
+	color: #FFF;
 }
 
 body {
