--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	text-align: center;
 	font-family: "微软雅黑 Light";
 	height: 100px;
+	background-color:#000;
 }
 
 .jianjie {
@@ -16,6 +17,7 @@
 	text-align: left;
 	font-family: "微软雅黑 Light";
 	color: #FFF;
+	background-color:#000;
 }
 .body {
 	background-image: url(milky-way-2695569_1280.jpg);
@@ -29,7 +31,8 @@
 .xia
  {
 	color: #FFF;
-	color: #FFF;	
+	color: #FFF;
+	background-color:#000;
 }
 .xia p {
 	color: #FFF;
