--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
 	color: #FFF;
 }
 
-body {
+.body {
 	background-image: url(./https://img2.imgtp.com/2024/05/05/AcSzilEb.jpg);
 	background-color:#000
 }
+
 </style>
 </head>
 	
