--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 	background-image: url(./https://img2.imgtp.com/2024/05/05/AcSzilEb.jpg);
 	background-color:#000
 }
-
+.html｛
+	background-color:#000；
+}
 </style>
 </head>
 	
