--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	font-family: "微软雅黑 Light";
 	height: 100px;
 	background-color:#000;
+	
 }
 
 .jianjie {
@@ -38,18 +39,13 @@
 	color: #FFF;
 }
 
-.body {
-	background-image: url(./https://img2.imgtp.com/2024/05/05/AcSzilEb.jpg);
-	background-color:#000
-}
-.html｛
-	background-color:#000；
-}
+
+
 </style>
 </head>
 	
 
-<body background="星空背景.jpg" background:"https://img2.imgtp.com/2024/05/05/AcSzilEb.jpg">
+<body style="background-color: #000000">
 
 <div class="touxiang">
   <h1 class="body">罗辑的网站</h1>
