--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ px;margin:10px;font-size:35px;">
 <div class="jianjie">
 <p>引用的原文文字、美术作品、媒体内容等，著作权皆为其原作者所有。</br>
 本网站仅供学习和交流使用。如产生一切法律纠纷，本站概不负责。</p>
+<p>wyc 程心 编</p>
 </div>
 </body>
 </html>
