--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
 <p>这个时代在罗辑眼中如天堂一样美丽，但渐渐的，他发现，人类的理论依然停留在他的时代，只有应用物理在蓬勃发展。罗辑参加了联合国大会，会上通过了第<strong>649号</strong>提案，宣布终止面壁计划。那是的人们都认为面壁计划是一个彻头彻尾的失败，罗辑与希恩斯被解除了面壁者身份。他十分感激。可他在新时代生活，却受到了多次暗杀，原来是ETO在一百多年前为罗辑量身定做的Killer病毒不停的操纵机器暗杀罗辑，于是他与冬眠苏醒的大史来到了地面上生活。</p>
 <p>与此同时，三体发射的一个探测器已经飞入太阳系，人类十分骄傲（因为2000艘战舰），自以为是的认为探测器上会放下一个和谈团队。人类集结了所有太空力量，前去迎接。<strong>丁仪</strong>带领小分队拦截，探测器形态优美，表面由<strong>强互作用力材料</strong>制成，比太阳系中最坚硬的物质都要强上百倍，都叫它<strong>水滴</strong>，有人称它为<strong>圣母的眼泪</strong>。但水滴突然发动攻击，丁仪小分队被气化，两千艘战舰被水滴尽数摧毁，人类这一仗输的狼狈不堪。只有量子号与青铜时代号侥幸逃脱。</p>
 <p>在人类迎接水滴前，<strong>章北海</strong>带领一艘战舰出逃，又有四艘战舰前去追捕。这五艘战舰与量子号与青铜时代号成为了人类唯一的太空力量。他们都向外太空进发。但只过了许久，两支队伍同时发生了内斗，只有蓝色空间号与青铜时代号生存下来，成立了星舰国际。人类世界对此强烈谴责，但两艘战舰不闻不问。</p>
-<p>水滴在攻击完后，径直向地球驶来。罗辑知道，水滴是来杀他的。但在最后，水滴调转方向，飞到了地球与太阳之间的<strong>拉格朗日点</>，建立了对<strong>太阳电波放大功能的干扰</>，人类再也不能用太阳向宇宙广播了。罗辑感到一身惬意：终于都结束了</p>
-<p>罗辑回家的路上，却发现人们又拥护他成为面壁者，因为他在冬眠前“诅咒”的<strong>187J3X1</>恒星真的被摧毁了，被一个超高速度的质量点直接摧毁。面壁计划重新建立，罗辑为唯一的面壁者。大史很好奇他是如何摧毁一颗星星的，在暗夜中，罗辑向他讲述了他的思想：<strong>黑暗森林理论</>。每个文明只能想尽办法的隐藏自己，因为不知对方是敌是友，只能毁灭他，星舰国际就是因为黑暗森林理论而内战的。</p>
-<p>再次成为面壁者，罗辑却找不到实质性的工作，只得干一件无关紧要的事：<strong>雪地工程</>。在罗辑工作了一段时间后，公众失去了对他的信任，他被人们唾弃。</p>
-<p>可就在一天晚上，罗辑最后调试了雪地工程的核弹布置位置，然后来到了叶文洁与杨冬的墓园里，在那里，他开始为自己掘墓。挖了一夜，他站了起来，威胁三体世界要用雪地工程的核弹爆炸来广播三体世界的坐标（因为黑暗森林理论，所以坐标发射出去了，就会像187J3X1恒星一样被摧毁，但太阳系也会被摧毁，所以后来被称为<strong>终极威慑</strong>），三体世界妥协了，他成功建立了对三体世界的威慑，人类由此进入了了一个崭新的时代：<strong>威慑纪元</>。</p>
+<p>水滴在攻击完后，径直向地球驶来。罗辑知道，水滴是来杀他的。但在最后，水滴调转方向，飞到了地球与太阳之间的<strong>拉格朗日点</strong>，建立了对<strong>太阳电波放大功能的干扰</strong>，人类再也不能用太阳向宇宙广播了。罗辑感到一身惬意：终于都结束了</p>
+<p>罗辑回家的路上，却发现人们又拥护他成为面壁者，因为他在冬眠前“诅咒”的<strong>187J3X1</strong>恒星真的被摧毁了，被一个超高速度的质量点直接摧毁。面壁计划重新建立，罗辑为唯一的面壁者。大史很好奇他是如何摧毁一颗星星的，在暗夜中，罗辑向他讲述了他的思想：<strong>黑暗森林理论</strong>。每个文明只能想尽办法的隐藏自己，因为不知对方是敌是友，只能毁灭他，星舰国际就是因为黑暗森林理论而内战的。</p>
+<p>再次成为面壁者，罗辑却找不到实质性的工作，只得干一件无关紧要的事：<strong>雪地工程</strong>。在罗辑工作了一段时间后，公众失去了对他的信任，他被人们唾弃。</p>
+<p>可就在一天晚上，罗辑最后调试了雪地工程的核弹布置位置，然后来到了叶文洁与杨冬的墓园里，在那里，他开始为自己掘墓。挖了一夜，他站了起来，威胁三体世界要用雪地工程的核弹爆炸来广播三体世界的坐标（因为黑暗森林理论，所以坐标发射出去了，就会像187J3X1恒星一样被摧毁，但太阳系也会被摧毁，所以后来被称为<strong>终极威慑</strong>），三体世界妥协了，他成功建立了对三体世界的威慑，人类由此进入了了一个崭新的时代：<strong>威慑纪元</strong>。</p>
 <h2>威慑：孤独</h2>
 <p>罗辑建立威慑后，庄颜也苏醒了，但只过很快就离开了他（有说法称庄颜不喜欢罗辑了），后来，随着地球技术的发展，罗辑又掌握了引力波发射器，他被称为<strong>执剑人</strong>。一开始，公众对罗辑是感激的，可随着人类女性化的浪潮，罗辑在公众心中成为了一个沉默寡言，满头银发的暴君。掌权者希望更换执剑人，换一个对公众更有亲和力的人来当执剑人。程心就被众人推选，最后成为了第二任执剑人，但程心的威慑度却只有10%（威慑度超过80%才有可能成功），导致她只当了十分钟执剑人，三体世界又露出了险恶的一面，威慑失败。</p>
 <p>人类战败了，三体世界将全面占领太阳系，人类全体躲到澳大利亚这块大陆上，维持文明的烛火。人类进入了威慑后时代。在这一时期，地球抵抗运动诞生了，罗辑是他们的精神领袖。</br>在威慑纪元十一年，万有引力号追击蓝色空间号（由于他们内战时犯了反人类罪），但最后，蓝色空间号不费一兵一卒，控制了万有引力号（通过四维空间），在得知威慑失败后，人们自我投票用万有引力号向宇宙广播了三体的坐标.</p>
-<p>过了许多年，掩体纪元，那时人们都十分害怕黑暗森林打击降临，于是任命罗辑担任地球文明博物馆的负责人，在最后太阳系二维化时，罗辑没有逃跑，而是在冥王星上成为了地球文明最后的守墓人。</p>
+<p>过了许多年，到了掩体纪元，那时人们都十分害怕黑暗森林打击降临，于是任命罗辑担任地球文明博物馆的负责人，在最后太阳系二维化时，罗辑没有逃跑，而是在冥王星上成为了地球文明最后的守墓人。</p>
 <h2>影响</h2>
 <p>他是一个完美的面壁者，三体人敬畏的少数人，也是一位成功的执剑人。他的行为影响了人类历史，为人类坚守了54年，可是只换来一句：人类不感谢罗辑。</p>
 </div>
@@ -97,6 +97,10 @@ px;margin:10px;padding-color:#6bcff6;font-size:35px">
 <blockquote style="微软雅黑 Light; color:#6bcff6; border-left-width:10px; background-color:rgba(255, 255, 255, 0.15); border-left:transparent; ; border-radius: 50
 px;margin:10px;font-size:35px;">
 <p>面壁者罗辑，我是你的破壁人。 </p></blockquote>
+</div>
+<div align="center";>
+	<img src="https://wangyichengcx.github.io/6943614390664742.github.io/guanxitu.png";></img>
+	<p>注：此图为AI生成。</p>
 </div>
 <div class="jianjie">
 <p>引用的原文文字、美术作品、媒体内容等，著作权皆为其原作者所有。</br>
