--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ px;margin:10px;font-size:35px;">
 </div>
 <div align="center";>
 	<img src="https://wangyichengcx.github.io/6943614390664742.github.io/guanxitu.png";></img>
-	<p>注：此图为AI生成。</p>
+	<p style="color:#FFFFFF">注：此图为AI生成。</p>
 </div>
 <div class="jianjie">
 <p>引用的原文文字、美术作品、媒体内容等，著作权皆为其原作者所有。</br>
