--- a/index.html
+++ b/index.html
@@ -4,48 +4,28 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>三体-罗辑的网站</title>
 <style type="text/css">
-.touxiang {
-	color: #FFF;
-	text-align: center;
+body,td,th {
 	font-family: "微软雅黑 Light";
-	height: 100px;
-	background-color:#000;
-	
 }
-
-.jianjie {
-	margin: 10px;
-	text-align: left;
-	font-family: "微软雅黑 Light";
+a:link {
 	color: #FFF;
-	background-color:#000;
+	text-decoration: none;
 }
-.body {
-	background-image: url(milky-way-2695569_1280.jpg);
+a:visited {
+	text-decoration: none;
+	color: #CCC;
 }
-.xia
-{
-	text-align:center;
-	background-color: #000;
-	
-	
-.xia
- {
-	color: #FFF;
-	color: #FFF;
-	background-color:#000;
+a:hover {
+	text-decoration: none;
 }
-.xia p {
-	color: #FFF;
+a:active {
+	text-decoration: none;
 }
-
-
-
 </style>
 </head>
 	
 
-<body style="background-color: #000000">
+<body background="https://wangyichengcx.github.io/xingkong.jpg">
 
 <div class="touxiang">
   <h1 class="body">罗辑的网站</h1>
