--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ a:active {
 
 <body background="https://wangyichengcx.github.io/xingkong.jpg">
 
-<div>
+<div style="text-align:center;">
   <h1 style="color:#FFFFFF;">罗辑的网站</h1>
 
 </div>
