--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <link rel="shortcut icon" href="https://wangyichengcx.github.io/tubiao.ico">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>三体-罗辑的网站</title>
+<meta charset="UTF-8"></meta>
+<meta content="三体-罗辑的网站">
 <style type="text/css">
 body,td,th {
 	font-family: "微软雅黑 Light";
